bin/tests/snapshots/manual_inherit__2a92c1cb560d2d727373fb3ad10da2b1_fix.snap
---
source: bin/tests/manual_inherit.rs
---
let a = 2; in { a = a; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a = 2; in { a = a; }
+let a = 2; in { inherit a; }
