bin/tests/snapshots/manual_inherit__2a92c1cb560d2d727373fb3ad10da2b1_lint.snap
---
source: bin/tests/manual_inherit.rs
---
let a = 2; in { a = a; }
---
[manual_inherit] Warning: Assignment instead of inherit
   ╭─[ <temp_file_path>:1:17 ]
   │
 1 │ let a = 2; in { a = a; }
   │                 ───┬──  
   │                    ╰──── This assignment is better written with inherit
───╯
