bin/tests/snapshots/manual_inherit__2a92c1cb560d2d727373fb3ad10da2b1_lint_errfmt.snap
---
source: bin/tests/manual_inherit.rs
---
let a = 2; in { a = a; }
---
<temp_file_path>>1:17:W:3:This assignment is better written with `inherit`
