bin/tests/snapshots/manual_inherit__2a92c1cb560d2d727373fb3ad10da2b1_lint_json.snap
---
source: bin/tests/manual_inherit.rs
---
let a = 2; in { a = a; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "manual_inherit",
      "note": "Assignment instead of inherit",
      "code": 3,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 17
            },
            "to": {
              "line": 1,
              "column": 23
            }
          },
          "message": "This assignment is better written with `inherit`",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 17
              },
              "to": {
                "line": 1,
                "column": 23
              }
            },
            "fix": "inherit a;"
          },
          "fixable": true
        }
      ]
    }
  ]
}
