bin/tests/snapshots/manual_inherit__fix_2a92c1cb560d2d727373fb3ad10da2b17cf57a13421fc72f9847d8d25bf8099d.snap
---
source: bin/tests/manual_inherit.rs
expression: snapshot
---
expression:
let a = 2; in { a = a; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a = 2; in { a = a; }
+let a = 2; in { inherit a; }
