bin/tests/snapshots/manual_inherit__fix_fa4a865f570f510fcd81988f978bb697eb1e44f54f1b40ce85eaddfd9bb86f20.snap
---
source: bin/tests/manual_inherit.rs
---
let a = 2; in { a = a; }

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a = 2; in { a = a; }
+let a = 2; in { inherit a; }
