bin/tests/snapshots/manual_inherit__lint_fa4a865f570f510fcd81988f978bb697eb1e44f54f1b40ce85eaddfd9bb86f20.snap
---
source: bin/tests/manual_inherit.rs
---
let a = 2; in { a = a; }

---
[W03] Warning: Assignment instead of inherit
   ╭─[<temp_file_path>:1:17]
   │
 1 │ let a = 2; in { a = a; }
   ·                 ───┬──  
   ·                    ╰──── This assignment is better written with inherit
───╯
